fix: a11y contrast color in view and edit for some blocks (#812)
* fix: secondary color contrast link block contacts

* fix: CTA link contrast

* fix: contrast link for alert blocks

* fix: block icons link contrast color

* fix countdown block link contrast

* fix: styles

* fix_ contacts blocks style in subsites

* fix: contacts blocks

* chore: Update RELEASE.md

---------

--- a/src/theme/ItaliaTheme/Blocks/_alert.scss
+++ b/src/theme/ItaliaTheme/Blocks/_alert.scss
@@ -23,7 +23,8 @@
   }
 }
 
-.public-ui {
+.public-ui,
+body.cms-ui .public-ui {
   .block.alertblock,
   .alertblock {
     .full-width {
@@ -49,11 +50,8 @@
       h3,
       h4,
       h5,
-      h6 {
-        color: $alert-danger-text;
-      }
-
-      a {
+      h6,
+      a:not(.btn) {
         color: $alert-danger-text;
       }
     }
@@ -67,11 +65,8 @@
       h3,
       h4,
       h5,
-      h6 {
-        color: $alert-warning-text;
-      }
-
-      a {
+      h6,
+      a:not(.btn) {
         color: $alert-warning-text;
       }
     }
