--- a/src/theme/ItaliaTheme/Blocks/_contacts.scss
+++ b/src/theme/ItaliaTheme/Blocks/_contacts.scss
@@ -26,7 +26,7 @@
       .description h4,
       .description h5,
       .description h6,
-      .description a {
+      .description a:not(.btn) {
         color: $primary-text;
       }
     }
@@ -41,7 +41,8 @@
       .description h3,
       .description h4,
       .description h5,
-      .description h6 {
+      .description h6,
+      .description a:not(.btn) {
         color: $secondary-text;
       }
     }
