--- a/src/theme/ItaliaTheme/Subsites/ItaliaTheme/Blocks/_contacts.scss
+++ b/src/theme/ItaliaTheme/Subsites/ItaliaTheme/Blocks/_contacts.scss
@@ -15,6 +15,9 @@
           .description {
             color: $subsite-primary-text;
           }
+          a:not(.btn) {
+            color: currentColor;
+          }
         }
 
         .card {
